--- a/home.html
+++ b/home.html
@@ -5,18 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Club - Home</title>
     <link rel="stylesheet" href="home.css">
+    <link rel="shortcut icon" href="main/imagens/logo.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <img src="main/imagens/logo.png" alt="" id="logo">
-            <a href="">Home</a>
-            <a href="">Sobre Nós</a>
-            <a href="">Cardápio</a>
-            <a href="">Espaço</a>
-            <a href="">Temas</a>
-            <a href="">Fun em casa</a>
             <a href="">Contato</a>
+            <a href="">Fun em casa</a>
+            <a href="">Temas</a>
+            <a href="">Espaço</a>
+            <a href="">Cardápio</a>
+            <a href="">Sobre Nós</a>
+            <a href="">Home</a>
         </nav>
         <h1>Fun Club (imagem back)</h1>
     </header>
@@ -229,45 +230,66 @@
 
         </section>
     </main>
-    <footer>
-        <footer>
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <a href="index.html"><img src="logo.png" alt="Company Logo"></a>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed commodo, velit eget porttitor elementum, libero velit egestas libero, vel aliquet dui nunc in metus.</p>
-                  <ul class="list-inline">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                  </ul>
+<footer>
+    <div>
+        <div class="div-foot">
+            <div class="col-icon">
+                <a href="index.html"><img src="main/imagens/logo.png" alt="Company Logo" id="logofoot"></a>
+                
+                <h4>Fale Conosco</h4>
+                <div class="icon-foot">
+                    <img src="main/imagens/icone-home.png" alt="">
+                    <a>123 Main St., Anytown, USA 12345</a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <h4>Quick Links</h4>
-                  <ul class="list-unstyled">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                  </ul>
+                <div class="icon-foot">
+                    <img src="main/imagens/icone-home.png" alt="">
+                    <a href="tel:123-456-7890">+55 (19) 99826-8692</a>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12">
-                  <h4>Contact Us</h4>
-                  <p>123 Main St., Anytown, USA 12345</p>
-                  <ul class="list-inline">
-                    <li class="list-inline-item"><a href="tel:123-456-7890">123-456-7890</a></li>
-                    <li class="list-inline-item"><a href="mailto:info@example.com">info@example.com</a></li>
-                  </ul>
-                  <img src="map.png" alt="Company Location">
+                <div class="icon-foot">
+                    <img src="main/imagens/icone-home.png" alt="">
+                    <a href="mailto:info@example.com">giovanicecchiniluvizuto@gmail.com</a>
                 </div>
-              </div>
-              <hr>
-              <p class="text-center">&copy; 2023 Your Company. All Rights Reserved.</p>
+                <div class="icon-foot">
+                    <img src="main/imagens/icone-home.png" alt="">
+                    <a href="instagram.com">Instagram</a>
+                </div>
             </div>
-          </footer>
-    </footer>
-    <script src="home.js"></script>
+                                
+            <div id="col-quick">
+                <h4>Quick Links</h4>
+                <ul class="list-unstyled">
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="a-começar/sobre.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="cardapio.html">Cardápio</a>
+                    </li>
+                    <li>
+                        <a href="espaco.html">Espaços</a>
+                    </li>
+                    <li>
+                        <a href="temas.html">Temas</a>
+                    </li>
+                    <li>
+                        <a href="funemcasa.html">Fun em Casa</a>
+                    </li>
+                    <li>
+                        <a href="contato.html">Contato</a>
+                    </li>
+                </ul>
+            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.7282849181256!2d-47.33892862407543!3d-22.738338531873797!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c89bcc2021bbb5%3A0x8d1b2d195de2cb8d!2sFun%20Club%20Buffet!5e0!3m2!1spt-BR!2sbr!4v1708609307802!5m2!1spt-BR!2sbr"style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+        <hr>
+        <div id="cred">
+        <p>&copy; 2023 - Fun Club Buffet. Todos os direitos reservados.</p>
+        <p>Desenvolvido por <a href="#">Giovani C. Luvizuto</a></p>
+        </div>
+    </div>
+</footer>
+<script src="home.js"></script>
 </body>
 </html>
