--- a/carrossel/carrosel.html
+++ b/carrossel/carrosel.html
@@ -19,7 +19,7 @@
                 <!--End Radio Buttons-->
                 <!--Slides Images-->
                 <div class="slide first">
-                    <div class="aaa"></div>">
+                    <div class="aaa"></div>
                 </div>
                 <div class="slide">
                     <div class="aaa slide2"></div>
