--- a/home.html
+++ b/home.html
@@ -30,17 +30,17 @@
               </div>
               <ul class="menu">
                  
-                <li class="menu-link"><a href="#0" class="text-item">Home</a></li>
-                <li class="menu-link"><a href="#0" class="text-item">Sobre Nós</a></li>
-                <li class="menu-link"><a href="#0" class="text-item">Cardápio</a></li>
-                <li class="menu-link"><a href="#0" class="text-item">Espaço</a></li>
-                <li class="menu-link"><a href="#0" class="text-item">Temas</a></li>
-                <li class="menu-link"><a href="#0" class="text-item">Fun em Casa</a></li>
+                <li class="menu-link"><a href="home.html" class="text-item">Home</a></li>
+                <li class="menu-link"><a href="sobre.html" class="text-item">Sobre Nós</a></li>
+                <li class="menu-link"><a href="cardapio.html" class="text-item">Cardápio</a></li>
+                <li class="menu-link"><a href="espaco.html" class="text-item">Espaço</a></li>
+                <li class="menu-link"><a href="tema.html" class="text-item">Temas</a></li>
+                <li class="menu-link"><a href="emcasa.html" class="text-item">Fun em Casa</a></li>
                 <li class="menu-link sub">
                    <a href="#0" class="text-item">Contato<span class="icon"></span></a>
                    <ul class="submenu">
-                     <li class="sub-item"><a href="#0">Contato</a></li>
-                     <li class="sub-item"><a href="#0">Orçamento</a></li>
+                     <li class="sub-item"><a href="contato.html">Contato</a></li>
+                     <li class="sub-item"><a href="orcamento.html">Orçamento</a></li>
                    </ul>
                  </li>   </ul>
                 </nav>
@@ -179,7 +179,7 @@
             <div class="coment" id="c11"><p>"Meu filho teve uma festa de aniversário incrível no buffet. As opções de recreação foram variadas e bem planejadas, garantindo que todas as crianças se divertissem. Certamente voltaremos no próximo ano!"</p></div>
             <div class="coment" id="c12"><p>"O aniversário da minha filha no buffet foi perfeito em todos os aspectos. A equipe foi excepcional, a comida deliciosa e as atividades mantiveram as crianças animadas o tempo todo. Não poderia ter sido melhor!"</p></div>
         </section>
-        <section>
+        <section id="slidess">
             <h2 id="h2-sli">Top 10 Temas</h2>
             <div>
                 <div class="slider">
@@ -199,70 +199,70 @@
                         <!--Slides Images-->
                         <div class="slide first">
                             <div class="aaa">
-                                <img src="assets/imagens/parceiros/aslyn-hair.jpg" alt="">
+                                <img src="assets/imagens/temas-p/hm.png" alt="">
                                 <div class="text-img">1º</div>
                                 <p>Homem-Aranha</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide2">
-                                <img src="assets/imagens/parceiros/carol-meira.jpg" alt="">
+                                <img src="assets/imagens/temas-p/frozen.png" alt="">
                                 <div class="text-img">2º</div>
                                 <p>Frozen</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide3">
-                                <img src="assets/imagens/parceiros/liga-heroi.jpg" alt="">
+                                <img src="assets/imagens/temas-p/snic.jpeg" alt="">
                                 <div class="text-img">3º</div>
                                 <p>Sonic</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide4">
-                                <img src="assets/imagens/parceiros/mumu.jpg" alt="">
+                                <img src="assets/imagens/temas-p/avenger.png" alt="">
                                 <div class="text-img">4º</div>
                                 <p>Avenger</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide5">
-                                <img src="assets/imagens/parceiros/orientec.jpg" alt="">
+                                <img src="assets/imagens/temas-p/princesas.jpg" alt="">
                                 <div class="text-img">5º</div>
                                 <p>Princesas</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide6">
-                                <img src="assets/imagens/parceiros/aslyn-hair.jpg" alt="">
+                                <img src="assets/imagens/temas-p/fut.png" alt="">
                                 <div class="text-img">6º</div>
                                 <p>Futbol</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide7">
-                                <img src="assets/imagens/parceiros/carol-meira.jpg" alt="">
+                                <img src="assets/imagens/temas-p/patc.jpg" alt="">
                                 <div class="text-img">7º</div>
                                 <p>Patrulha Canina</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide8">
-                                <img src="assets/imagens/parceiros/liga-heroi.jpg" alt="">
+                                <img src="assets/imagens/temas-p/unicornio.png" alt="">
                                 <div class="text-img">8º</div>
                                 <p>Unicornio</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide9">
-                                <img src="assets/imagens/parceiros/mumu.jpg" alt="">
+                                <img src="assets/imagens/temas-p/neon.png" alt="">
                                 <div class="text-img">9º</div>
                                 <p>Neon</p>
                             </div>
                         </div>
                         <div class="slide">
                             <div class="aaa slide10">
-                                <img src="assets/imagens/parceiros/orientec.jpg" alt="">
+                                <img src="assets/imagens/temas-p/wandinha.jpg" alt="">
                                 <div class="text-img">10º</div>
                                 <p>Wandinha</p>
                             </div>
@@ -284,19 +284,19 @@
             <div class="col-icon">
                 <h4>Fale Conosco</h4>
                 <div class="icon-foot">
-                    <img src="assets/imagens/icone-home.png" alt="">
+                    <img src="assets/imagens/loc.png" alt="">
                     <a href="https://maps.app.goo.gl/971KaNnq6UPTCKFz6"  target="_blank">R. Cap. Sebastião Antas, 265 - Vila Rehder, Americana - SP, 13465-380</a>
                 </div>
                 <div class="icon-foot">
-                    <img src="assets/imagens/icone-home.png" alt="">
-                    <a href="tel:+55 (19) 3462-6560" target="_blank">+55 (19) 3462-6560</a>
+                    <img src="assets/imagens/whatsapp.png" alt="">
+                    <a href="" target="_blank">+55 (19) 3462-6560</a>
                 </div>
                 <div class="icon-foot">
-                    <img src="assets/imagens/icone-home.png" alt="">
+                    <img src="assets/imagens/mail.png" alt="">
                     <a href="mailto:info@example.com" target="_blank">giovanicecchiniluvizuto@gmail.com</a>
                 </div>
                 <div class="icon-foot">
-                    <img src="assets/imagens/icone-home.png" alt="">
+                    <img src="assets/imagens/instagram.png" alt="">
                     <a href="https://www.instagram.com/funclubbuffet/" target="_blank">@funclubbuffet</a>
                 </div>
             </div>
